<resources>
    <string name="app_name">Elaniin Challenge</string>
    <string name="entrance">Ingresa con\ntu cuenta</string>
    <string name="pick_zone">Elige una zona</string>

    <string name="kanto">kanto</string>
    <string name="johto">johto</string>
    <string name="hoenn">hoenn</string>
    <string name="sinnoh">sinnoh</string>
    <string name="unova">unova</string>
    <string name="kalos">kalos</string>
    <string name="alola">alola</string>
    <string name="galar">galar</string>
    <string name="paldea">paldea</string>

    <string name="grass">Hierba</string>
    <string name="fire">Fuego</string>
    <string name="poison">Veneno</string>
    <string name="psychic">Psiquico</string>
    <string name="fight">Peleador</string>
    <string name="water">Agua</string>
    <string name="normal">Normal</string>
    <string name="dark">Oscuro</string>
    <string name="flying">Volador</string>
    <string name="electric">Electrico</string>
    <string name="steel">Metal</string>
    <string name="ground">Tierra</string>
    <string name="rock">Piedra</string>
    <string name="ghost">Fantasma</string>
    <string name="bug">Bicho</string>
    <string name="ice">Hielo</string>
    <string name="dragon">Dragon</string>
    <string name="fairy">Hada</string>

    <string name="video_message">Se esta armando la lista de pokemons\nte dejo unos openings mientras.. son muchos..</string>

    <string name="no_internet">No hay internet.. prueba nuevamente cuando vuelva..</string>

    <string name="team_name">Nombre del equipo</string>
    <string name="save">Guardar</string>
    <string name="search">Agregar</string>

    <string name="error_message">Se ha producido un error autenticando al usuario</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>


    <string name="code">Pasale este codigo a tus amigos para compartir tu equipo</string>
    <string name="edit_code">Ingrese Codigo</string>

    <string name="create">Crear Equipo</string>
    <string name="insert_code">Cargar un equipo externo</string>
    <string name="share">Compartir equipo</string>
    <string name="delete">Eliminar equipo</string>

    <string name="region">region</string>
    <string name="email">email</string>
    <string name="prefs_file">com.frost.elaniinchallenge.PREFERENCE_FILE_KEY</string>

</resources>